<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_centerInParent="true">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_about_report">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/first"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:layout_margin="8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_weight="1"
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/the_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="25"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arajozoor"
                    android:text="@string/the_name"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/first"
                android:gravity="center_horizontal"
                android:layout_margin="8dp"
                android:id="@+id/second">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_weight="1"
                    android:id="@+id/user_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="25"
                    app:layout_constraintHorizontal_bias="0.0"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arajozoor"
                    android:text="@string/email"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:layout_below="@+id/second">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_weight="1"
                    android:id="@+id/contact_message"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:hint="@string/the_message_hint"
                    android:importantForAutofill="no"
                    android:maxLength="300"
                    android:maxLines="8"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:padding="5dp"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_message"
                    android:fontFamily="@font/arajozoor"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:layout_below="@+id/third"
                android:gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/arajozoor"
                    android:text="@string/cancel_button"
                    tools:ignore="ButtonStyle" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="2dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/arajozoor"
                    android:text="@string/send_button"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>